Fixed header responsive on iphone 5 screen

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -70,7 +70,7 @@
   }
 
   .navRightWrap {
-    width: 32%;
+    width: 35%;
     float: right;
     padding: 0 10px 0 0;
   }
